--- a/app/templates/user_order_list.html
+++ b/app/templates/user_order_list.html
@@ -4,10 +4,11 @@
 <head>
   <meta charset="UTF-8">
 
+  <link rel="shortcut icon" href="images/favicon.html">
   <meta name="description" content="">
   <meta name="keywords" content="">
 
-  <title>Catalog (grid view)</title>
+  <title>Catalog (list type view)</title>
 
   <link rel="shortcut icon" href="{{url_for('static',filename='favicon.ico')}}">
   <link href="{{url_for('static',filename='css/userstyle.css')}}" media="screen" rel="stylesheet" type="text/css">
@@ -40,10 +41,10 @@
 			prev: ".slidprev", // must be class, use . sign
 			next: ".slidnext", // must be class, use . sign
 			auto: true	
-		 });
+		});
 	});
-   </script>
-   <script>
+  </script>
+  <script>
 	$(function() {
 	  $('#list_product').carouFredSel({
 		prev: '#prev_c1',
@@ -57,8 +58,8 @@
 	  });
 	  $(window).resize();
 	});
-   </script>
-   <script>
+  </script>
+  <script>
        $(document).ready(function(){
 	      $("button").click(function(){
 		     $(this).addClass('click')
@@ -66,41 +67,10 @@
        })
   </script>
     
-</head>
+ </head>
 <body>
   <div class="container_12">
-    <div id="top">
-      <div class="grid_3">
-        <div class="phone_top">
-          Call Us +777 (100) 1234
-        </div><!-- .phone_top -->
-      </div><!-- .grid_3 -->
-   
-      <div class="grid_6">
-        <div class="welcome">
-          Welcome visitor you can <a href="login.html">login</a> or <a href="login.html">create an account</a>.
-        </div><!-- .welcome -->
-      </div><!-- .grid_6 -->
-   
-      <div class="grid_3">
-        <div class="valuta">
-          <ul>
-            <li class="curent"><a href="#">$</a></li>
-            <li><a href="#">&#8364;</a></li>
-            <li><a href="#">&#163;</a></li>
-          </ul>
-        </div><!-- .valuta -->
-    
-        <div class="lang">
-          <ul>
-            <li class="curent"><a href="#">EN</a></li>
-            <li><a href="#">FR</a></li>
-            <li><a href="#">GM</a></li>
-          </ul>
-        </div><!-- .lang -->
-      </div><!-- .grid_3 -->
-    </div><!-- #top -->
-  
+
     <div class="clear"></div>
    
     <header id="branding">
@@ -191,69 +161,62 @@
       </div><!-- .grid_12 -->
     </div><!-- .container_12 -->
   </div><!-- .block_nav_primary -->
-
+  
+  <div class="clear"></div>
+  
+  <div class="container_12">
+    <div class="grid_12">
+       <div class="breadcrumbs">
+	      <a href="index.html">Home</a><span>&#8250;</span><a href="#">Category</a><span>&#8250;</span><span class="current">This page</span>
+       </div><!-- .breadcrumbs -->
+    </div><!-- .grid_12 -->
+  </div><!-- .container_12 -->
+  
+  <div class="clear"></div>
+  
   <section id="main">
     <div class="container_12">
-      
        <div id="content" class="grid_9">
 	      <h1 class="page_title">Product List</h1>
 	      
 	      <div class="options">
+		     <div class="grid-list">
+			   <a class="grid" href="catalog_grid.html"><span>img</span></a>
+			   <a class="list curent" href="index.html"><span>img</span></a>
+		     </div><!-- .grid-list -->
 
 		     
-		     <div class="show">
-			    Show
-			    <select>
-				   <option>1</option>
-				   <option>2</option>
-				   <option>3</option>
-				   <option>4</option>
-				   <option>5</option>
-				   <option>6</option>
-				   <option>7</option>
-				   <option>8</option>
-				   <option>9</option>
-				   <option>10</option>
-				   <option>11</option>
-				   <option>12</option>
-			     </select>
-			    
-			    per page
-		     </div><!-- .show -->
-		     
-		     <div class="sort">
-			   Sort By
-			    <select>
-				   <option>Position</option>
-				   <option>Price</option>
-				   <option>Rating</option>
-				   <option>Name</option>
-			     </select>
-			    
-			    <a class="sort_up" href="#">&#8593;</a>
-		     </div><!-- .sort -->
+
 	      </div><!-- .options -->
-	      {%for book in collects%}
-	      <div class="grid_product">
-		     <div class="grid_3 product">
-			    <div class="prev">
-				   <a href="{{url_for('book_detail',book_id=book['id'])}}"><img src="{{url_for('static',filename=book['image'])}}" alt="" title="" /></a>
-			    </div><!-- .prev -->
-			    <h3 class="title">{{book['name']}}</h3>
-			    <div class="cart">
-				   <div class="price">
-					  <div class="vert">
-						 <div class="price_new">${{book['price']}}</div>
-					  </div>
-				   </div>
-				   <a href="#" class="obn"></a>
-				   <a href="#" class="like"></a>
-				   <a href="#" class="bay"></a>
-			    </div><!-- .cart -->
-		     </div><!-- .grid_3 -->
-          {%endfor%}
+	      
+	      <div class="listing_product">
+            {% for order in order_lists%}
+			<div class="product_li">
+				
+				<div class="grid_4">
+					<div class="entry_content">
+						<a href="{{url_for('order_detail',order_id=order.order_id)}}"><h3 class="title">订单编号：{{order.order_id}}</h3></a>
+
+						<p >下单时间：{{order.order_time}}</p>
+						<p>订单状态：{{order.order_status}}</p>
+					</div><!-- .entry_content -->
+				</div><!-- .grid_4 -->
+                
+				
+				<div class="grid_2">
+					<div class="cart">
+						<div class="price">
+							<div class="price_new">{{order.order_price}}</div>
+						</div>
+						<a href="{{url_for('order_detail',order_id=order.order_id)}}" class="bay">查看详情</a>
+					</div><!-- .cart -->
+				</div><!-- .grid_2 -->
+				
+				<div class="clear"></div>
+			</div><!-- .article -->
+			{% endfor %}
 	      <div class="clear"></div>
-	      </div><!-- .grid_product -->
+	      </div><!-- .listing_product -->
 	      
 	      <div class="clear"></div>
 	      
